# process_api

./: .gitignore  Dockerfile  LICENSE  README.md
src/: init.sql  main.py  pyproject.toml  requirements.txt
src/database/: config.py
src/models/: Process.py
src/repositories/: process.py
src/routers/: process.py
src/schemas/: Process.py
src/views/: view_process.py
tests/serializers/: test_time_interval.py
tests/validators/: test_time_validator.py
